# fp_py

./: README.md  pyproject.toml
fp_py/: Either.py  Maybe.py
fp_py/types/: __init__.py  applicative.py  functor.py  lambda_types.py  monad.py  monoid.py  semigroup.py
fp_py/utils/: __init__.py  lambda_calculus.py
tests/: test_either.py  test_lambda.py  test_maybe.py  test_semigroup.py  test_try.py  test_typed_lambda.py
