[tool.poetry]
name = "fp-py"
version = "0.1.0"
description = ""
authors = ["Evgeniy Bliacher <evgeniy.bliacher@alterahealth.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
assertpy = "^1.1"
typing-inspect = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "lambdacalculus",
    "maybe",
    "either",
    "trymonad",
    "validation"
]
